--- a/app/src/main/res/layout/app_bar_control_panel.xml
+++ b/app/src/main/res/layout/app_bar_control_panel.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/app_bar_controlPanel"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,4 +24,13 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_control_panel"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_money"
+        android:tint="@color/colorIcons"/>
 </android.support.design.widget.CoordinatorLayout>
