--- a/app/src/main/res/layout/content_fund.xml
+++ b/app/src/main/res/layout/content_fund.xml
@@ -18,142 +18,10 @@
             android:layout_height="48dp"
             android:background="@color/colorPrimary"/>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/fund_vmid_card"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fundWatchlist_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/auxiliary_margin"
-                android:layout_marginTop="@dimen/auxiliary_margin"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="VMID"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="24sp"/>
-
-                <TextView
-                    android:id="@+id/fund_vmidPrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="@dimen/auxiliary_margin"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="40sp"
-                    android:textStyle="bold"
-                    tools:text="£28.50"/>
-
-                <TextView
-                    android:id="@+id/fund_vmidChange"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    tools:text="+0.09"/>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/fund_vwrl_card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/fund_vmid_card"
-            android:layout_margin="@dimen/activity_vertical_margin">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/auxiliary_margin"
-                android:layout_marginTop="@dimen/auxiliary_margin"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/auxiliary_margin"
-                    android:gravity="center"
-                    android:text="VWRL"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="24sp"/>
-
-                <TextView
-                    android:id="@+id/fund_vwrlPrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="@dimen/auxiliary_margin"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="40sp"
-                    android:textStyle="bold"
-                    tools:text="£54.47"/>
-
-                <TextView
-                    android:id="@+id/fund_vwrlChange"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    tools:text="-0.27"/>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/fund_vuke_card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/fund_vwrl_card"
-            android:layout_margin="@dimen/activity_vertical_margin">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/auxiliary_margin"
-                android:layout_marginTop="@dimen/auxiliary_margin"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/auxiliary_margin"
-                    android:gravity="center"
-                    android:text="VUKE"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="24sp"/>
-
-                <TextView
-                    android:id="@+id/fund_vukePrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="@dimen/auxiliary_margin"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="40sp"
-                    android:textStyle="bold"
-                    tools:text="£30.54"/>
-
-                <TextView
-                    android:id="@+id/fund_vukeChange"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    tools:text="-0.33"/>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </RelativeLayout>
 </ScrollView>
