--- a/app/src/main/res/layout/app_bar_control_panel.xml
+++ b/app/src/main/res/layout/app_bar_control_panel.xml
@@ -31,6 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_money"
+        android:src="@drawable/ic_save"
         android:tint="@color/colorIcons"/>
 </android.support.design.widget.CoordinatorLayout>
