--- a/app/src/main/res/layout/list_item_stock_history.xml
+++ b/app/src/main/res/layout/list_item_stock_history.xml
@@ -18,7 +18,6 @@
             android:id="@+id/list_item_symbol"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/list_label_symbol"
             android:layout_weight="2"
             android:gravity="center"
             android:padding="2dp"
@@ -52,7 +51,7 @@
             android:text="Price: "/>
 
         <TextView
-            android:id="@+id/list_item_price"
+            android:id="@+id/list_item_amount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/list_item_total"
@@ -76,7 +75,7 @@
             android:id="@+id/list_item_quantity"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/list_item_price"
+            android:layout_below="@+id/list_item_amount"
             android:layout_toRightOf="@+id/list_label_quantity"
             android:layout_weight="1"
             android:padding="2dp"
