--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -15,6 +15,10 @@
             android:icon="@drawable/ic_calendar"
             android:title="@string/purchase_history"/>
         <item
+            android:id="@+id/nav_dividend"
+            android:icon="@drawable/ic_timeline"
+            android:title="@string/title_activity_dividend"/>
+        <item
             android:id="@+id/nav_controlPanel"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/control_panel"/>
