--- a/app/src/main/res/layout/content_stock_purchase.xml
+++ b/app/src/main/res/layout/content_stock_purchase.xml
@@ -56,7 +56,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/stockPurchase_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/newStockPurchase"
         android:background="@color/red"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
