Stopped showing the success toast message as the user can see the dividend added to the list below the input form. Added labels to the dividend list items.

--- a/app/src/main/res/layout/list_item_dividend.xml
+++ b/app/src/main/res/layout/list_item_dividend.xml
@@ -11,7 +11,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/auxiliary_margin"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:padding="2dp"
+            android:textSize="18sp"
+            android:text="@string/amount_label"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:text="@string/date_label"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -31,6 +53,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:textStyle="bold"
+            android:gravity="center"
             tools:text="Saturday, Feb 10 2016"/>
     </LinearLayout>
 </LinearLayout>
