--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -14,14 +14,33 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/dashboard_portfolio"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="@color/colorPrimary"/>
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:paddingTop="@dimen/auxiliary_margin"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            tools:text="£3287.17"/>
+
+        <TextView
+            android:id="@+id/dashboard_portfolio_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_portfolio"
+            android:background="@color/colorPrimary"
+            android:paddingBottom="@dimen/auxiliary_margin"
+            android:gravity="center"
+            android:text="@string/portfolio_value"/>
 
         <android.support.v7.widget.CardView
             android:id="@+id/netWorth_current_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_portfolio_label"
+            android:layout_marginTop="-16dp"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin">
@@ -80,40 +99,10 @@
             tools:text="1.43%"/>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/dashboard_portfolio_card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/dashboard_dividendPercentageYield"
-            android:layout_margin="@dimen/activity_vertical_margin">
-
-            <TextView
-                android:id="@+id/dashboard_portfolio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="@dimen/auxiliary_margin"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="40sp"
-                android:textStyle="bold"
-                tools:text="£3287.17"/>
-        </android.support.v7.widget.CardView>
-
-        <TextView
-            android:id="@+id/dashboard_percentageFI"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/dashboard_portfolio_card"
-            android:gravity="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            tools:text="0.787%"/>
-
-        <android.support.v7.widget.CardView
             android:id="@+id/dashboard_daysSinceInvestment_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dashboard_percentageFI"
+            android:layout_below="@+id/dashboard_dividendPercentageYield"
             android:layout_margin="@dimen/activity_vertical_margin">
 
             <TextView
@@ -127,5 +116,16 @@
                 android:textStyle="bold"
                 tools:text="14 days"/>
         </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/dashboard_percentageFI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_daysSinceInvestment_card"
+            android:gravity="center"
+            android:textColor="@color/colorAccent"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            tools:text="0.787%"/>
     </RelativeLayout>
 </ScrollView>
