--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -31,8 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_portfolio"
             android:background="@color/colorPrimary"
-            android:paddingBottom="@dimen/auxiliary_margin"
             android:gravity="center"
+            android:paddingBottom="@dimen/auxiliary_margin"
             android:text="@string/portfolio_value"/>
 
         <android.support.v7.widget.CardView
@@ -40,21 +40,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_portfolio_label"
-            android:layout_marginTop="-16dp"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin">
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="-16dp">
 
-            <TextView
-                android:id="@+id/dashboard_diff"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="@dimen/auxiliary_margin"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="40sp"
-                android:textStyle="bold"
-                tools:text="£232.42"/>
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/dashboard_diff"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/auxiliary_margin"
+                    android:paddingRight="@dimen/auxiliary_margin"
+                    android:paddingTop="@dimen/auxiliary_margin"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="40sp"
+                    android:textStyle="bold"
+                    tools:text="£232.42"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/investment_gain"/>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <TextView
@@ -75,16 +89,30 @@
             android:layout_below="@+id/dashboard_percentageChange"
             android:layout_margin="@dimen/activity_vertical_margin">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
             <TextView
                 android:id="@+id/dashboard_dividendYield"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="@dimen/auxiliary_margin"
+                android:paddingLeft="@dimen/auxiliary_margin"
+                android:paddingRight="@dimen/auxiliary_margin"
+                android:paddingTop="@dimen/auxiliary_margin"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 tools:text="£85.30"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/dividend_gain"/>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <TextView
@@ -105,16 +133,30 @@
             android:layout_below="@+id/dashboard_dividendPercentageYield"
             android:layout_margin="@dimen/activity_vertical_margin">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
             <TextView
                 android:id="@+id/dashboard_daysSinceInvestment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="@dimen/auxiliary_margin"
+                android:paddingLeft="@dimen/auxiliary_margin"
+                android:paddingRight="@dimen/auxiliary_margin"
+                android:paddingTop="@dimen/auxiliary_margin"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 tools:text="14 days"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/days_without_investment"/>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <TextView
