--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -35,139 +35,158 @@
             android:paddingBottom="@dimen/auxiliary_margin"
             android:text="@string/portfolio_value"/>
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:id="@+id/netWorth_current_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_portfolio_label"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="-16dp">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/dashboard_diff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:paddingEnd="@dimen/auxiliary_margin"
+                android:paddingStart="@dimen/auxiliary_margin"
+                android:paddingTop="@dimen/auxiliary_margin"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="36sp"
+                android:textStyle="bold"
+                tools:text="£232.42"/>
 
-                <TextView
-                    android:id="@+id/dashboard_diff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingLeft="@dimen/auxiliary_margin"
-                    android:paddingRight="@dimen/auxiliary_margin"
-                    android:paddingTop="@dimen/auxiliary_margin"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="40sp"
-                    android:textStyle="bold"
-                    tools:text="£232.42"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/investment_gain"/>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/auxiliary_margin"
+                android:paddingStart="@dimen/auxiliary_margin"
+                android:text="@string/investment_gain"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/dashboard_percentageChange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/netWorth_current_card"
-            android:gravity="center"
+            android:gravity="end"
+            android:paddingEnd="@dimen/auxiliary_margin"
+            android:paddingStart="@dimen/auxiliary_margin"
+            android:paddingTop="@dimen/auxiliary_margin"
             android:textColor="@color/colorAccent"
-            android:textSize="30sp"
+            android:textSize="26sp"
             android:textStyle="bold"
             tools:text="7.95%"/>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/dashboard_dividendYield_card"
+        <TextView
+            android:id="@+id/dashboard_percentageChange_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_percentageChange"
-            android:layout_margin="@dimen/activity_vertical_margin">
+            android:gravity="end"
+            android:paddingEnd="@dimen/auxiliary_margin"
+            android:paddingStart="@dimen/auxiliary_margin"
+            android:text="@string/percentage_growth"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/dashboard_dividendYield_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_percentageChange_label"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/dashboard_dividendYield"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingLeft="@dimen/auxiliary_margin"
-                android:paddingRight="@dimen/auxiliary_margin"
+                android:paddingEnd="@dimen/auxiliary_margin"
+                android:paddingStart="@dimen/auxiliary_margin"
                 android:paddingTop="@dimen/auxiliary_margin"
                 android:textColor="@color/colorPrimaryText"
-                android:textSize="40sp"
+                android:textSize="36sp"
                 android:textStyle="bold"
                 tools:text="£85.30"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/dividend_gain"/>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/auxiliary_margin"
+                android:paddingStart="@dimen/auxiliary_margin"
+                android:text="@string/dividend_yield"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/dashboard_dividendPercentageYield"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/dashboard_dividendYield_card"
-            android:gravity="center"
+            android:gravity="end"
+            android:paddingEnd="@dimen/auxiliary_margin"
+            android:paddingStart="@dimen/auxiliary_margin"
+            android:paddingTop="@dimen/auxiliary_margin"
             android:textColor="@color/colorAccent"
-            android:textSize="30sp"
+            android:textSize="26sp"
             android:textStyle="bold"
             tools:text="1.43%"/>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/dashboard_daysSinceInvestment_card"
+        <TextView
+            android:id="@+id/dashboard_dividendPercentageYield_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_dividendPercentageYield"
-            android:layout_margin="@dimen/activity_vertical_margin">
+            android:gravity="end"
+            android:paddingEnd="@dimen/auxiliary_margin"
+            android:paddingStart="@dimen/auxiliary_margin"
+            android:text="@string/percentage_dividend_yield"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/dashboard_daysSinceInvestment_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_dividendPercentageYield_label"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/dashboard_daysSinceInvestment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingLeft="@dimen/auxiliary_margin"
-                android:paddingRight="@dimen/auxiliary_margin"
+                android:paddingEnd="@dimen/auxiliary_margin"
+                android:paddingStart="@dimen/auxiliary_margin"
                 android:paddingTop="@dimen/auxiliary_margin"
                 android:textColor="@color/colorPrimaryText"
-                android:textSize="40sp"
+                android:textSize="36sp"
                 android:textStyle="bold"
                 tools:text="14 days"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/days_without_investment"/>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/auxiliary_margin"
+                android:paddingStart="@dimen/auxiliary_margin"
+                android:text="@string/days_without_investment"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/dashboard_percentageFI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_daysSinceInvestment_card"
-            android:gravity="center"
+            android:gravity="end"
+            android:paddingEnd="@dimen/auxiliary_margin"
+            android:paddingStart="@dimen/auxiliary_margin"
+            android:paddingTop="@dimen/auxiliary_margin"
             android:textColor="@color/colorAccent"
-            android:textSize="30sp"
+            android:textSize="26sp"
             android:textStyle="bold"
             tools:text="0.787%"/>
+
+        <TextView
+            android:id="@+id/dashboard_percentageFI_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_percentageFI"
+            android:gravity="end"
+            android:paddingEnd="@dimen/auxiliary_margin"
+            android:paddingStart="@dimen/auxiliary_margin"
+            android:text="@string/percentage_fi"/>
     </RelativeLayout>
 </ScrollView>
