--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -82,6 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_percentageChange"
             android:gravity="end"
+            android:paddingBottom="@dimen/auxiliary_margin"
             android:paddingEnd="@dimen/auxiliary_margin"
             android:paddingStart="@dimen/auxiliary_margin"
             android:text="@string/percentage_growth"/>
@@ -99,7 +100,6 @@
                 android:layout_height="wrap_content"
                 android:paddingEnd="@dimen/auxiliary_margin"
                 android:paddingStart="@dimen/auxiliary_margin"
-                android:paddingTop="@dimen/auxiliary_margin"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="36sp"
                 android:textStyle="bold"
@@ -108,6 +108,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/auxiliary_margin"
                 android:paddingEnd="@dimen/auxiliary_margin"
                 android:paddingStart="@dimen/auxiliary_margin"
                 android:text="@string/dividend_yield"/>
@@ -122,7 +123,6 @@
             android:gravity="end"
             android:paddingEnd="@dimen/auxiliary_margin"
             android:paddingStart="@dimen/auxiliary_margin"
-            android:paddingTop="@dimen/auxiliary_margin"
             android:textColor="@color/colorAccent"
             android:textSize="26sp"
             android:textStyle="bold"
@@ -134,6 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_dividendPercentageYield"
             android:gravity="end"
+            android:paddingBottom="@dimen/auxiliary_margin"
             android:paddingEnd="@dimen/auxiliary_margin"
             android:paddingStart="@dimen/auxiliary_margin"
             android:text="@string/percentage_dividend_yield"/>
@@ -151,7 +152,6 @@
                 android:layout_height="wrap_content"
                 android:paddingEnd="@dimen/auxiliary_margin"
                 android:paddingStart="@dimen/auxiliary_margin"
-                android:paddingTop="@dimen/auxiliary_margin"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="36sp"
                 android:textStyle="bold"
@@ -185,6 +185,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/dashboard_percentageFI"
             android:gravity="end"
+            android:paddingBottom="@dimen/auxiliary_margin"
             android:paddingEnd="@dimen/auxiliary_margin"
             android:paddingStart="@dimen/auxiliary_margin"
             android:text="@string/percentage_fi"/>
