+ In order to support Fund purchases which don't have to be integer amounts (unlike individual stocks or ETF's) the inputs now support decimals up to six decimal places for increased precision.

--- a/app/src/main/res/layout/content_stock_purchase.xml
+++ b/app/src/main/res/layout/content_stock_purchase.xml
@@ -35,7 +35,7 @@
             android:id="@+id/newStockPurchase_quantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:hint="@string/quantity"/>
 
         <EditText
