+ Dashboard now supports the two shares in my portfolio. Replacing '//'  which for reasons unknown is added to the JSON response body. Toast will display for any stocks purchased that the stock dictionary hasn't looked up.

--- a/app/src/main/res/layout/content_stock_purchase.xml
+++ b/app/src/main/res/layout/content_stock_purchase.xml
@@ -21,8 +21,7 @@
             android:id="@+id/newStockPurchase_symbol"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/symbol"
-            android:text="VMID.L"/>
+            android:hint="@string/symbol"/>
 
         <EditText
             android:id="@+id/newStockPurchase_price"
